starting of project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>portfolio.sid.com</title>
+   <link rel="stylesheet" href="/portfolioV1/style.css">
 </head>
 <body>
    My name is Siddhant Rastogi
