--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
    <link rel="stylesheet" href="/portfolioV1/style.css">
 </head>
 <body>
-   My name is Siddhant Rastogi
+   <div class="navbar">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </div>
+   <p style="color: aliceblue;">My name is Siddhant Rastogi</p>
 </body>
 </html>
