navbar and bg image

--- a/index.html
+++ b/index.html
@@ -4,15 +4,35 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>portfolio.sid.com</title>
-   <link rel="stylesheet" href="/portfolioV1/style.css">
+   <link rel="stylesheet" href="/style.css">
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
+   <header class="top-navbar">
+      <a href="#">PORTFOLIO</a>
+      <a href="#">Home</a>
+      <a href="#">Social</a>
+      <a href="#">Contact</a>
+   </header>
+    <div class="container">
+        <div class="main-content">
+            <div class="content-box">
+                <p><span style="font-size: 24px;">I'm</span><br><span class="press-start-2p-regular name animated-gradient-text" id="name">SIDDHANT<br></span><span class="press-start-2p-regular name animated-gradient-text" id="name">RASTOGI</span>
+               </p>
+            </div>
+        </div>
+        <aside class="sidebar">
+            <div class="sidebar-box">
+               <div class="right-navbar">
+                  <a href="#">About</a>
+                  <a href="#">Projects</a>
+                  <a href="#">Experience</a>
+               </div>
+            </div>
+        </aside>
     </div>
-   <p style="color: aliceblue;">My name is Siddhant Rastogi</p>
 </body>
 </html>
