--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="main-content">
             <div class="content-box">
-                <p><span style="font-size: 24px;">I'm</span><br><span class="press-start-2p-regular name animated-gradient-text" id="name">SIDDHANT<br></span><span class="press-start-2p-regular name animated-gradient-text" id="name">RASTOGI</span>
+                <p><span style="font-size: 24px;">I'm</span><br><span class="press-start-2p-regular name animated-gradient-text" id="name">SIDDHANT<br></span><span class="press-start-2p-regular name animated-gradient-text" id="name">RASTOGI</span><br>"Code, coffee, and curiosity—three things that keep me going! I turn complex problems into clean solutions, one bug (or feature?) at a time. 🚀"
                </p>
             </div>
         </div>
